got some stuff done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,10 @@ body{
     border-style: inset;
     margin: auto;
     margin-bottom: 20px;
+    overflow: auto;
 }
 
 .leaveButton{
     margin-top: 20px;
 }
+
