--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body{
     text-align: center;
 }
 
-.messages{
+#messages{
     width: 500px;
     height: 175px;
     border-width: 5px;
@@ -10,6 +10,7 @@ body{
     margin: auto;
     margin-bottom: 20px;
     overflow: auto;
+    text-align: left;
 }
 
 .leaveButton{
